feat: adiciona notificacao por email via brevo